# Vision-Por-Computador-Talleres-y-Parcial

./: CMakeLists.txt  README.md  run.sh  setup.sh
C1Taller1/: CMakeLists.txt  main.cpp
C1Taller2/: CMakeLists.txt  main.cpp
OpenCvAndroid/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
OpenCvAndroid/app/src/main/java/com/example/opencvandroid/: MainActivity.java
exposicion/Regiones/: CMakeLists.txt  main.cpp
exposicion/clasificadormultivariante/: CMakeLists.txt  main.cpp
exposicion/umbrales/: CMakeLists.txt  icm_seg  main.cpp  umbrales
exposicion/umbralesprev/: CMakeLists.txt  main.cpp
